# svcron

./: .gitignore  AUTHORS  Makefile.am  README.md  bitstring.h  catChangeLog  conf-email  configure.ac  create_rpm  cron.h  crontab.5  crontab.5.in  database.c  default.configure  do_command.c  entry.c  env.c  externs.h  funcs.h  globals.h  job.c  macros.h  misc.c  pathnames.h  popen.c  prepare_obs  pw_dup.c  structs.h  svcron.8  svcron.8.in  svcron.c  svcron.spec.in  svcrontab.1  svcrontab.1.in  svcrontab.c  user.c
.github/workflows/: codeql.yml  svcron-c-cpp.yml  svcron-freebsd.yml  svcron-obs.yml
debian/: .gitignore  Makefile  README.Debian.in  control.in  copyright.in  rules  svcron.dsc.in  svcron.install
doc/: ChangeLog
